--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Cube</title>
+    <title>AR Cube without Polyfill</title>
     <link rel="stylesheet" href="style.css">
     <script src="libs/three.min.js"></script>
-    <script src="libs/webxr-polyfill.js"></script>
 </head>
 <body>
     <div id="ar-container">
